--- a/frontend/update24x7/src/app/components/header/header.component.html
+++ b/frontend/update24x7/src/app/components/header/header.component.html
@@ -19,5 +19,8 @@
     <button class="btn btn-info btn-lg btn-nav mx-auto" routerLink="/contact">
       Contact Us
     </button>
+    <button class="btn btn-info btn-lg btn-nav mx-auto" routerLink="/login">
+      Admin Login
+    </button>
   </form>
 </nav>
