Cleaned up header and footer
Header and footer cleaned a little.  Icon improved in both content and size.

--- a/certification-project/src/app/layout/main-header/main-header.component.html
+++ b/certification-project/src/app/layout/main-header/main-header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-dark">
   <a class="navbar-brand" routerLink="/home"
-    ><img src="../../../assets/img/newspaper.png" height="40px"
+    ><img src="../../../assets/img/247.png" height="47px"
   /></a>
 
   <form class="form-inline form-nav">
