--- a/certification-project/src/app/homepage/homepage-container/homepage-container.component.html
+++ b/certification-project/src/app/homepage/homepage-container/homepage-container.component.html
@@ -58,7 +58,7 @@
     <div class="p-2">
       <div class="col-auto d-flex justify-content-center">
         <h3
-          class="button btn-info btn-lg"
+          class="button btn-success btn-lg"
           (click)="showNewsData(newsList[0].description, newsList[0].title)"
         >
           Latest News 1: {{ getTitle(0) }}
@@ -68,7 +68,7 @@
     <div class="p-2">
       <div class="col-auto d-flex justify-content-center">
         <h3
-          class="button btn-info btn-lg"
+          class="button btn-success btn-lg"
           (click)="showNewsData(newsList[1].description, newsList[1].title)"
         >
           Latest News 2: {{ getTitle(1) }}
@@ -78,7 +78,7 @@
     <div class="p-2">
       <div class="col-auto d-flex justify-content-center">
         <h3
-          class="button btn-info btn-lg"
+          class="button btn-success btn-lg"
           (click)="showNewsData(newsList[2].description, newsList[2].title)"
         >
           Latest News 3: {{ getTitle(2) }}
