--- a/certification-project/src/app/layout/main-header/main-header.component.html
+++ b/certification-project/src/app/layout/main-header/main-header.component.html
@@ -4,17 +4,17 @@
   /></a>
 
   <form class="form-inline form-nav">
-    <button class="btn btn-success btn-lg btn-nav mx-auto" routerLink="/home">
+    <button class="btn btn-primary btn-lg btn-nav mx-auto" routerLink="/home">
       Home
     </button>
-    <button class="btn btn-success btn-lg btn-nav mx-auto" routerLink="/sports">
+    <button class="btn btn-primary btn-lg btn-nav mx-auto" routerLink="/sports">
       Sports
     </button>
-    <button class="btn btn-success btn-lg btn-nav mx-auto" routerLink="/about-us">
+    <button class="btn btn-primary btn-lg btn-nav mx-auto" routerLink="/about-us">
       About Us
     </button>
     <button
-      class="btn btn-success btn-lg btn-nav mx-auto"
+      class="btn btn-primary btn-lg btn-nav mx-auto"
       routerLink="/contact-us"
     >
       Contact Us
