--- a/certification-project/src/app/weather/item/weather-item.component.html
+++ b/certification-project/src/app/weather/item/weather-item.component.html
@@ -4,7 +4,7 @@
         <p class="info">{{ item.description | uppercase }}</p>
     </div>
    <div class="col-2">
-        <span class="temperature" [temperatureCelsius]="item.temperature">{{ item.temperature }}°C</span>
+        <span class="temperature" [temperatureFarenheit]="item.temperature">{{ item.temperature }}°F</span>
     </div>
 
     <span class="delete" (click)="onDeleteItem($event, item)">[close]</span>
