Some messing around with header, footer, and about
about will need more work, will continue on that later.  Weather needed an adjustment as it wasn't working for some reason.  Header is about done, could mess with buttons some, but that's something to save for after things get fixed up more.

--- a/certification-project/src/app/pages/about-us/about-us.component.html
+++ b/certification-project/src/app/pages/about-us/about-us.component.html
@@ -25,10 +25,11 @@
         fan.  Our information is 
       </p>
       <p>
-      ///////////////
+        Our page updates 24 hours a day, 7 days a week, we're always on so you don't have to be
       </p>
       <p>
-            ///////////////
+        Thank you for being a loyal reader.  We appreciate all our visitors.  Please consider 
+        a donation so that we can keep sending you free news all day every day with no ads.
       </p>
     </div>
   </div>
