--- a/certification-project/src/app/admin-components/news-list/news-list.component.html
+++ b/certification-project/src/app/admin-components/news-list/news-list.component.html
@@ -7,11 +7,7 @@
         User Name: {{ data.name }}, Email: {{ data.email }}
       </p>
       <h1 class="text-center">News List</h1>
-      <table
-        class="table table-striped table-bordered table-sm row-border hover"
-        datatable
-        [dtOptions]="dtOptions"
-      >
+      <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions">
         <thead>
           <tr>
             <th scope="col">Title</th>
@@ -26,21 +22,12 @@
             <td>{{ news.description }}</td>
             <td>{{ news.publishedAt | date }}</td>
             <td>
-              <button
-                class="btn btn-info btn-md btn-sm ml-2"
-                (click)="editNews(news._id)"
-              >
+              <button class="btn btn-info btn-md btn-sm ml-2" (click)="editNews(news._id)">
                 Edit
               </button>
-              <button
-                class="btn btn-warning btn-sm ml-2"
-                mwlConfirmationPopover
-                [popoverTitle]="popoverTitle"
-                [popoverMessage]="popoverMessage"
-                placement="right"
-                (confirm)="deleteNews(news._id)"
-                (cancel)="cancelClicked = true"
-              >
+              <button class="btn btn-warning btn-sm ml-2" mwlConfirmationPopover [popoverTitle]="popoverTitle"
+                [popoverMessage]="popoverMessage" placement="right" (confirm)="deleteNews(news._id)"
+                (cancel)="cancelClicked = true">
                 Delete
               </button>
             </td>
