--- a/certification-project/src/app/layout/main-footer/main-footer.component.html
+++ b/certification-project/src/app/layout/main-footer/main-footer.component.html
@@ -1,20 +1,16 @@
-<nav
-  class="navbar navbar-dark bg-dark fixed-bottom d-flex justify-content-between"
->
+<nav class="navbar navbar-dark bg-dark fixed-bottom d-flex justify-content-between">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" routerLink="/register">Admin login</a>
+      <a class="nav-link" routerLink="/login">Admin login</a>
     </li>
   </ul>
   <span class="navbar-text mx-2"> Phone: 555-555-5555 </span>
   <span class="navbar-text mx-2">
-     8888 Granada Ave N., Oakdale, MN 55128
+    8888 Granada Ave N., Oakdale, MN 55128
   </span>
   <span class="navbar-text">
     Icons from
-    <a href="https://www.flaticon.com/authors/freepik" title="Freepik"
-      >Freepik</a
-    >
+    <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
     from
     <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
   </span>
