--- a/certification-project/src/app/homepage/homepage-container/homepage-container.component.html
+++ b/certification-project/src/app/homepage/homepage-container/homepage-container.component.html
@@ -16,11 +16,7 @@
   <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
     <mdb-carousel-item>
       <div class="view w-100">
-        <img
-          class="d-block w-100"
-          src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg"
-          alt="First slide"
-        />
+        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg" alt="First slide" />
         <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
       </div>
       <div class="carousel-caption">
@@ -29,11 +25,7 @@
     </mdb-carousel-item>
     <mdb-carousel-item>
       <div class="view w-100">
-        <img
-          class="d-block w-100"
-          src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg"
-          alt="Second slide"
-        />
+        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg" alt="Second slide" />
         <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
       </div>
       <div class="carousel-caption">
@@ -42,11 +34,7 @@
     </mdb-carousel-item>
     <mdb-carousel-item>
       <div class="view w-100">
-        <img
-          class="d-block w-100"
-          src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg"
-          alt="Third slide"
-        />
+        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide" />
         <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
       </div>
       <div class="carousel-caption">
@@ -57,30 +45,21 @@
   <div class="row justify-content-around">
     <div class="p-2">
       <div class="col-auto d-flex justify-content-center">
-        <h3
-          class="button btn-success btn-lg"
-          (click)="showNewsData(newsList[0].description, newsList[0].title)"
-        >
+        <h3 class="button btn-success btn-lg" (click)="showNewsData(newsList[0].description, newsList[0].title)">
           Latest News 1: {{ getTitle(0) }}
         </h3>
       </div>
     </div>
     <div class="p-2">
       <div class="col-auto d-flex justify-content-center">
-        <h3
-          class="button btn-success btn-lg"
-          (click)="showNewsData(newsList[1].description, newsList[1].title)"
-        >
+        <h3 class="button btn-success btn-lg" (click)="showNewsData(newsList[1].description, newsList[1].title)">
           Latest News 2: {{ getTitle(1) }}
         </h3>
       </div>
     </div>
     <div class="p-2">
       <div class="col-auto d-flex justify-content-center">
-        <h3
-          class="button btn-success btn-lg"
-          (click)="showNewsData(newsList[2].description, newsList[2].title)"
-        >
+        <h3 class="button btn-success btn-lg" (click)="showNewsData(newsList[2].description, newsList[2].title)">
           Latest News 3: {{ getTitle(2) }}
         </h3>
       </div>
