--- a/certification-project/src/app/homepage/homepage-container/homepage-container.component.css
+++ b/certification-project/src/app/homepage/homepage-container/homepage-container.component.css
@@ -1,3 +1,17 @@
 img {
   height: 200px;
 }
+.btn{
+  margin: 120px;
+}
+.carousel .carousel-item {
+  height: 500px;
+}
+
+.carousel-item img {
+    position: absolute;
+    object-fit:cover;
+    top: 0;
+    left: 0;
+    min-height: 500px;
+}
