--- a/certification-project/src/app/admin-components/layouts/footer/footer.component.html
+++ b/certification-project/src/app/admin-components/layouts/footer/footer.component.html
@@ -8,7 +8,7 @@
   </ul>
   <span class="navbar-text mx-2"> Phone: 555-555-5555 </span>
   <span class="navbar-text mx-2">
-    8888 Granada Ave N., Oakdale, MN 55128
+    379 Thornall St, Edison, NJ 08837
   </span>
   <a class="navbar-brand"><img src="../../../assets/img/24_7.png" height="27px"
     /></a>
