--- a/certification-project/src/app/layout/main-header/main-header.component.html
+++ b/certification-project/src/app/layout/main-header/main-header.component.html
@@ -12,10 +12,7 @@
     <button class="btn btn-dark  btn-nav mx-auto" routerLink="/about-us">
       About Us
     </button>
-    <button
-      class="btn btn-dark  btn-nav mx-auto"
-      routerLink="/contact-us"
-    >
+    <button class="btn btn-dark  btn-nav mx-auto" routerLink="/contact-us">
       Contact Us
     </button>
     <a class="navbar-brand"><img src="../../../assets/img/24_7.png" height="40px"
