--- a/certification-project/src/app/pages/about-us/about-us.component.html
+++ b/certification-project/src/app/pages/about-us/about-us.component.html
@@ -2,6 +2,7 @@
 <div class="container-fluid pb-5">
   <div class="row justify-content-around mt-2">
     <div class="col-md-5">
+      <!--Google map of location-->
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3031.078921866651!2d-74.3368732847375!3d40.561934379348514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3b667532db7fd%3A0x42a56146afbed101!2sTata%20Consultancy%20Services!5e0!3m2!1sen!2sus!4v1600787675471!5m2!1sen!2sus"
         width="600"
@@ -14,6 +15,7 @@
       ></iframe>
     </div>
     <div class="col-md-5">
+      <!--A few paragraphs about our news service-->
       <h5>
         We deliver news and information every hour of every day.  
         If we don't cover it, it didn't happen.
