--- a/certification-project/src/app/layout/main-footer/main-footer.component.html
+++ b/certification-project/src/app/layout/main-footer/main-footer.component.html
@@ -1,18 +1,16 @@
 <nav class="navbar navbar-dark bg-dark fixed-bottom d-flex justify-content-between">
-  <a class="navbar-brand"><img src="../../../assets/img/24_7.png" height="27px"
-    /></a>
+  <a class="navbar-brand"><img src="../../../assets/img/24_7.png" height="27px" /></a>
   <ul class="navbar-nav">
 
     <li class="nav-item">
-      <a class="nav-link" routerLink="/login">Admin login</a>
+      <a class="nav-link" routerLink="/login">Admin Portal</a>
     </li>
-    
+
   </ul>
   <span class="navbar-text mx-2"> Phone: 555-555-5555 </span>
 
   <span class="navbar-text mx-2">
     379 Thornall St, Edison, NJ 08837
   </span>
-  <a class="navbar-brand"><img src="../../../assets/img/24_7.png" height="27px"
-    /></a>
+  <a class="navbar-brand"><img src="../../../assets/img/24_7.png" height="27px" /></a>
 </nav>
